working on small issues

--- a/resources/assets/sass/_feedsPage.scss
+++ b/resources/assets/sass/_feedsPage.scss
@@ -3,7 +3,7 @@
 
   .ui.slider.checkbox {
     input:checked~.box:before, input:checked~label:before, .box:before, label:before {
-      background-color: $green !important;
+      background-color: #eee !important;
     }
 
     padding: 5px 3px 4px 13px;
@@ -232,7 +232,13 @@
   position: fixed;
   bottom: 0;
   height: 45px;
-  background: #333;
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#3a3a3a+0,444444+100 */
+  background: #3a3a3a; /* Old browsers */
+  background: -moz-linear-gradient(top,  #3a3a3a 0%, #444444 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top,  #3a3a3a 0%,#444444 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom,  #3a3a3a 0%,#444444 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3a3a3a', endColorstr='#444444',GradientType=0 ); /* IE6-9 */
+
   left: 0;
   width: 100%;
   z-index: 999;
@@ -263,23 +269,24 @@
     margin-top: 0.7em;
     margin-right: 1em;
   }
-  span.name {
-    color: #fff;
-    line-height: 2.1em;
-    margin-left: 10px;
-  }
-  #logout-avatar {
-    height: 35px;
-    margin: 5px 5px 5px 15px;
+  .avatar-wrap {
+    float: left;
+    margin: 9px 25px;
 
-    .ui.label {
-      background: $green;
+    span.name {
+      color: #fff;
+      line-height: 1.65em;
+      margin-left: 10px;
+      //&::first-letter {
+      //  text-transform: uppercase;
+      //}
     }
 
     .avatar {
-      background: #eee;
+      background: $green;
       height: 25px;
       width: 25px;
+      color: #fff;
       border-radius: 50%;
       float: left;
       text-align: center;
@@ -287,7 +294,6 @@
       text-transform: uppercase;
     }
   }
-
 
   #user-manage-menu {
     cursor: pointer;
